add nav bar and side bar

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -4,5 +4,44 @@
  * ref：https://v1.vuepress.vuejs.org/config/#index-styl
  */
 
+body
+  font-family: 'Montserrat'
+  font-weight: 400
+  font-size: 16px
+
+.navbar a
+  font-family: 'Montserrat'
+  font-weight: 500
+  font-size: 15px
+
+.navbar .site-name
+  font-size: 22px
+  font-weight: 600 !important
+  color: var(--vp-c-text-1)
+  position: relative
+
+.navbar span
+  font-family: 'Montserrat'
+  font-weight: 500
+  font-size: 15px
+
+.sidebar-group a.sidebar-link
+  font-family: 'Montserrat'
+  font-weight: 500
+  font-size: 15px
+
+.sidebar-group li a.sidebar-link
+    padding-left: 1.2rem;
+
+.vuepress-toc
+  font-family: 'Montserrat'
+  font-weight: 500
+  font-size: 15px
+  
+.vuepress-toc .vuepress-toc-item.active a 
+  font-family: 'Montserrat'
+  font-weight: 500
+  font-size: 14px
+
 .home .hero img
   max-width 450px!important
